kubernetes/data-lakehouse/base/catalog/nessie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessie
  namespace: data
spec:
  selector:
    app: nessie
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
