kubernetes/data-lakehouse/base/catalog/nessie/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nessie
  namespace: data
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nessie.${cluster_domain}`)
      kind: Rule
      services:
        - name: nessie
          port: 5678
